fix: z-index of code block decorative line may cover the float button

--- a/src/modules/MdRender/index.css
+++ b/src/modules/MdRender/index.css
@@ -136,7 +136,6 @@
     font-size: 8px;
     color: #F9FAFB;
     padding-right: 2px;
-    z-index: 50;
 }
 
 #MD blockquote{
